---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 14. 03. 2023
  Minor Features:
    - Military Supply: Added 2 new starter packages, one of which creates an optional additional challenge.
  Changes:
    - Lab research speed technologies now use the vanilla lab's icon instead of the burner lab icon.
    - Lab research speed 2 technology now has Logistic science pack technology as a prerequisite.
    - Military Supply: Changed how starter packages are implemented.  I don't expect anyone to care about this.
    - Military Supply: Changed how the supply dropoff chest is implemented.  Again, you probably won't care.
    - Military Supply: Made the map generally much prettier.
    - Military Supply: Added an upgrade for refined concrete.
    - Military Supply: Changed the prerequisites of the normal concrete upgrade.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 11. 03. 2023
  Graphics:
    - New icons for the recipes that recycle items.
  Balancing:
    - Increased mining radius of advanced burner mining drill to make building new mining setups easier.  This may break existing mining setups if you have mixed ores.
    - Military Supply: Tweaked the amount of items requested per order.
    - Military Suuply: Light armor has been removed.  Heavy armor upgrade no longer grants inventory size bonuses.  Changed upgrade prices to compensate.
  Changes:
    - Tweaked some descriptions and some dialogue for the scenario.
    - Changed the name of the scenario to have a space between words.
    - Military Supply: Research is now disabled for all forces, not just the player's force.  I expect this never to be relevant.
    - Military Supply: The day-night cycle now has a period of 15 minutes.
    - Military Supply: Choosing the combat starter package now gives an armor with nightvision equipment installed.